fix page border navbar issue by setting extreme z-index

--- a/packages/frontend/src/css/namari-style.scss
+++ b/packages/frontend/src/css/namari-style.scss
@@ -89,14 +89,14 @@ figure {
 
 .page-border {
     position: fixed;
-    z-index: 15;
+    z-index: 99999;
     pointer-events: none;
 }
 
 .page-border .bottom-border, .page-border .left-border, .page-border .right-border, .page-border .top-border {
     background: #f3f3ef;
     position: fixed;
-    z-index: 15;
+    z-index: 99999;
 }
 
 .page-border > .top-border, .page-border > .right-border, .page-border > .bottom-border, .page-border > .left-border {
@@ -1011,7 +1011,7 @@ h6 {
     right: 0;
     bottom: 0;
     background-color: $background-color; /* change if the mask should have another color then white */
-    z-index: 9999; /* makes sure it stays on top */
+    z-index: 99999; /* makes sure it stays on top */
 }
 
 #status {
